--- a/TgdSpa/packages.config
+++ b/TgdSpa/packages.config
@@ -1,7 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Breeze.WebApi" version="1.1.2" targetFramework="net40" />
+  <package id="EntityFramework" version="5.0.0" targetFramework="net40" />
+  <package id="jQuery" version="1.9.1" targetFramework="net40" />
+  <package id="Knockout.Validation" version="1.0.1" targetFramework="net40" />
+  <package id="knockoutjs" version="2.2.1" targetFramework="net40" />
+  <package id="KoLite" version="1.1.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Razor" version="2.0.20710.0" targetFramework="net40" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.0.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebApi" version="4.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net40" />
@@ -9,5 +16,8 @@
   <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="4.5.6" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40" />
+  <package id="Sammy.js" version="0.7.4" targetFramework="net40" />
+  <package id="WebActivator" version="1.5.3" targetFramework="net40" />
+  <package id="WebGrease" version="1.1.0" targetFramework="net40" />
 </packages>
