--- a/TgdSpa/TgdSpa.csproj
+++ b/TgdSpa/TgdSpa.csproj
@@ -131,9 +131,12 @@
     <Compile Include="App_Start\BreezeWebApiConfig.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\NotesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Note.cs" />
+    <Compile Include="Models\NotesDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -152,12 +155,20 @@
     <Content Include="Content\images\preloader-w8-line-white.gif" />
     <Content Include="Global.asax" />
     <Content Include="Scripts\app\main.js" />
+    <Content Include="Scripts\app\router.js" />
+    <Content Include="Scripts\app\viewLocator.js" />
+    <Content Include="Scripts\app\viewModels\details.js" />
+    <Content Include="Scripts\app\viewModels\list.js" />
+    <Content Include="Scripts\app\views\details.html" />
+    <Content Include="Scripts\app\views\list.html" />
     <Content Include="Scripts\breeze.debug.js" />
     <Content Include="Scripts\breeze.intellisense.js" />
     <Content Include="Scripts\breeze.min.js" />
+    <Content Include="Scripts\app\data.js" />
     <Content Include="Scripts\jquery-1.9.1-vsdoc.js" />
     <Content Include="Scripts\jquery-1.9.1.js" />
     <Content Include="Scripts\jquery-1.9.1.min.js" />
+    <Content Include="Scripts\jquery.ba-bbq.js" />
     <Content Include="Scripts\knockout-2.2.1.debug.js" />
     <Content Include="Scripts\knockout-2.2.1.js" />
     <Content Include="Scripts\knockout.activity.js" />
@@ -168,8 +179,6 @@
     <Content Include="Scripts\q.js" />
     <Content Include="Scripts\q.min.js" />
     <Content Include="Scripts\require.js" />
-    <Content Include="Scripts\sammy-0.7.4.js" />
-    <Content Include="Scripts\sammy-0.7.4.min.js" />
     <Content Include="Scripts\text.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -182,7 +191,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -225,6 +233,7 @@
     </VisualStudio>
   </ProjectExtensions>
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
+  <Import Project="..\packages\ScriptSharp.0.7.5.1\tools\ScriptSharp.targets" Condition="Exists('..\packages\ScriptSharp.0.7.5.1\tools\ScriptSharp.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
